<resources>
    <string name="DATE_SUGGESTIONS_AVOID_DATES">Avoid dates and years that are associated with you.</string>
    <string name="DATE_WARNING_DATES">Dates are often easy to guess.</string>
    <string name="DEFAULT_SUGGESTIONS_NO_NEED_SYMBOLS">No need for symbols, digits, or uppercase letters.</string>
    <string name="DEFAULT_SUGGESTIONS_USE_FEW_WORDS">Use a few words, avoid common phrases.</string>
    <string name="DICTIONARY_SUGGESTIONS_ALL_UPPERCASE">All-uppercase is almost as easy to guess as all-lowercase.</string>
    <string name="DICTIONARY_SUGGESTIONS_CAPITALIZATION">Capitalization doesn&apos;t help very much.</string>
    <string name="DICTIONARY_SUGGESTIONS_L33T">Predictable substitutions like &apos;@&apos; instead of &apos;a&apos; don&apos;t help very much.</string>
    <string name="DICTIONARY_SUGGESTIONS_REVERSED">Reversed words aren&apos;t much harder to guess.</string>
    <string name="DICTIONARY_WARNING_ENGLISH_WIKIPEDIA_ITSELF">A word by itself is easy to guess.</string>
    <string name="DICTIONARY_WARNING_ETC_NAMES_COMMON">Common names and surnames are easy to guess.</string>
    <string name="DICTIONARY_WARNING_ETC_NAMES_THEMSELVES">Names and surnames by themselves are easy to guess.</string>
    <string name="DICTIONARY_WARNING_PASSWORDS_SIMILAR">This is similar to a commonly used password.</string>
    <string name="DICTIONARY_WARNING_PASSWORDS_TOP10">This is a top-10 common password.</string>
    <string name="DICTIONARY_WARNING_PASSWORDS_TOP100">This is a top-100 common password.</string>
    <string name="DICTIONARY_WARNING_PASSWORDS_VERY_COMMON">This is a very common password.</string>
    <string name="EXTRA_SUGGESTIONS_ADD_ANOTHER_WORD">Add another word or two. Uncommon words are better.</string>
    <string name="REGEX_SUGGESTIONS_AVOID_RECENT_YEARS">Avoid recent years, avoid years that are associated with you.</string>
    <string name="REGEX_WARNING_RECENT_YEARS">Recent years are easy to guess.</string>
    <string name="REPEAT_SUGGESTIONS_AVOID_REPEATED_WORDS">Avoid repeated words and characters.</string>
    <string name="REPEAT_WARNING_LIKE_AAA">Repeats like &apos;aaa&apos; are easy to guess.</string>
    <string name="REPEAT_WARNING_LIKE_ABCABCABC">Repeats like &apos;abcabcabc&apos; are only slightly harder to guess than &apos;abc&apos;.</string>
    <string name="SEQUENCE_SUGGESTIONS_AVOID_SEQUENCES">Avoid sequences.</string>
    <string name="SEQUENCE_WARNING_LIKE_ABCOR6543">Sequences like abc or 6543 are easy to guess.</string>
    <string name="SPATIAL_SUGGESTIONS_USE_LONGER_KEYBOARD_PATTERN">Use a longer keyboard pattern with more turns.</string>
    <string name="SPATIAL_WARNING_SHORT_KEYBOARD_PATTERNS">Short keyboard patterns are easy to guess.</string>
    <string name="accessibility_no_browser_support">Autofill Feature is not available for Browsers on your device. Minimum requirement for that is Android 4.3 or later. Although you can still do manual filling using Enpass keyboard.</string>
    <string name="add_attachment">Attach Photo</string>
    <string name="add_field">Add Field</string>
    <string name="add_to_watch">Add To Watch</string>
    <string name="add_totp">Add TOTP</string>
    <string name="android_notification">Notifications</string>
    <string name="android_watch">Android Watch</string>
    <string name="auto_lock_interval_title">Lock After</string>
    <string name="auto_submit_summary"></string>
    <string name="auto_submit_title">Auto submit</string>
    <string name="autofilling_status">Autofilling status</string>
    <string name="autolock_intervals_summary">Time after which lock app in background</string>
    <string name="backup_n_restore">Backup and Restore</string>
    <string name="behaviour">Behavior</string>
    <string name="browser_title">Browser</string>
    <string name="certificate_abort">Abort</string>
    <string name="certificate_accept">Trust this certificate (unsafe)</string>
    <string name="change_category_title">Change Category</string>
    <string name="change_pass_title">Change Master Password</string>
    <string name="change_pin_title">Change PIN</string>
    <string name="chromebook_add_attachment">Attach File</string>
    <string name="clear_clipboard_intervals_summary">Time after which clipboard will be clear</string>
    <string name="clear_web_data_summ">Clears all cookies and cache of Enpass browser.</string>
    <string name="clear_web_data_title">Clear Web Data</string>
    <string name="clearclipboard">Clear Clipboard After</string>
    <string name="clipboard">CLIPBOARD</string>
    <string name="copy_card_number">Copy Card Number</string>
    <string name="copy_cvv">Copy CVC</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_username">Copy Username</string>
    <string name="could_be_better">It could be better</string>
    <string name="crash_report">Crash reports</string>
    <string name="crash_report_summary">Crash reports are sent to us anonymously, containing only the stack trace and device info without any of your data.</string>
    <string name="customize_title">Customize</string>
    <string name="default_browser_agent_title">User Agent</string>
    <string name="default_search_engine_title">Search Engine</string>
    <string name="delete_sample_anytime">You can start with some sample and can delete them anytime.</string>
    <string name="description_android_notification">Whenever the Enpass autofill service finds something on screen to be autofilled, you will be notified using notifications (if enabled).</string>
    <string name="description_enpass_keyboard">Along with autofilling of login details, Enpass keyboard also lets you search any item and choose its fields to be filled manually. For autofilling, Enpass autofill service must be enabled.</string>
    <string name="display">Display</string>
    <string name="drawer_category_selected">Preserve Sidebar Selection</string>
    <string name="drawer_category_selected_summary">Save last active position on sidebar while leaving Enpass from where it will resume on next launch.</string>
    <string name="enable_screenshot">Allow Screenshots</string>
    <string name="enable_screenshot_summary">Turning this ON will let you take screenshot and do screen recording of Enpass.</string>
    <string name="enabling_automatic_filling">For autofilling, it is mandatory to enable Enpass Autofill Service from device accessibility settings.</string>
    <string name="enabling_touch_id_text">Enabling this will let you unlock Enpass using Fingerprint instead of master password, but make sure you never forget it.</string>
    <string name="enpass_autofilling">Enpass Autofill Service</string>
    <string name="enpass_browser">Enpass browser</string>
    <string name="enpass_keyboard_in_autofill">Enpass Keyboard</string>
    <string name="erase_data_summ">Permanently deletes your data and settings from this device only. Data stored on any cloud will not be deleted.</string>
    <string name="erase_data_title">Erase Everything</string>
    <string name="fill_using">Fill Using</string>
    <string name="filling_description">Autofilling of logins from Enpass into noted apps and websites can be done using Enpass keyboard or notifications. For auto detection of fields and filling Enpass autofill service must be enabled.</string>
    <string name="general">General</string>
    <string name="help_title">Help</string>
    <string name="here_enable_enpass_setting">Here are some of the important settings which you can enable now or maybe later from Enpass settings.</string>
    <string name="hideSensitive_summary">If Enabled (recommended), all the sensitive fields will be concealed by bullets.</string>
    <string name="hideSensitive_title">Hide Sensitive</string>
    <string name="history">Password History</string>
    <string name="keyboard_autofilling">Autofill</string>
    <string name="language_summ">Changes the operational language of Enpass.</string>
    <string name="language_title">Language</string>
    <string name="launch_url">Launch Url</string>
    <string name="learn_more">Learn more</string>
    <string name="lock_on_leavint_title">Lock on Leaving</string>
    <string name="locking_priorities_title">Autolocking</string>
    <string name="master_password_label">Master Password</string>
    <string name="match_url_hostname">Match URL hostname</string>
    <string name="match_url_hostname_summary">Enabling this will autofill only if the URL hostname is an exact match i.e. items saved with URL as &apos;domain.com&apos; will not be available for autofilling on &apos;subdomain.domain.com&apos; and vice versa.</string>
    <string name="maybe_later">Maybe later</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_duplicate">Duplicate</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_cancel">Cancel</string>
    <string name="menu_edit_reorder_fields_title">Reorder Fields</string>
    <string name="menu_lock_title">Lock</string>
    <string name="menu_share">Share</string>
    <string name="new_show_subtitle">Show Subtitles</string>
    <string name="notify_me_for_updates">Notify me for updates</string>
    <string name="notify_me_for_updates_summary">This is the only option through which we can notify you for updates on very important security news and software update. We recommend that you should not disable this.</string>
    <string name="open_links_in_title">Open Links in</string>
    <string name="partner_sign_in">Partners&apos; Sign-in</string>
    <string name="partner_signin_msg">Signing-in as partner lets you restore your corporate settings only. Your data will not be saved on any server.</string>
    <string name="quick_unlock_summary">You can use numeric digit PIN Code to quickly unlock Enpass.</string>
    <string name="recommend_enpass_summ">Version</string>
    <string name="recommend_enpass_title">Rate Enpass</string>
    <string name="remove_favorite">Remove from Favorites</string>
    <string name="remove_from_watch">Remove From Watch</string>
    <string name="review_msg">We are so happy that you love Enpass. We really appreciate if you can spend some time in giving review and thus help in improving Enpass.</string>
    <string name="sample_data">Sample data</string>
    <string name="scan_finger_print">Fingerprint</string>
    <string name="searchInCards_title">Search in</string>
    <string name="security_title">Security</string>
    <string name="send_analytics">Send Analytics</string>
    <string name="send_analytics_summary">We collect analytics only to track Enpass usage across globe. We guarantee that none of your personal information or data is collected in analytics.</string>
    <string name="settings_advanced">Advanced</string>
    <string name="sidebar">Sidebar</string>
    <string name="sidebar_summary">Select folders and categories to be displayed in Sidebar. You can also rearrange the order of their display.</string>
    <string name="social_title">Social</string>
    <string name="sound_feedback">Unlock Feedback</string>
    <string name="sound_feedback_summary">Plays sound with vibration as a feedback at the time of unlocking keychain and incorrect password.</string>
    <string name="ssl_expire_on">Expires on: %1$s</string>
    <string name="ssl_issuer">Issuer: %1$s</string>
    <string name="ssl_subject">Subject: %1$s</string>
    <string name="support_and_help">Support and Help</string>
    <string name="sure_take_me_there">Sure, take me there</string>
    <string name="sync">Sync</string>
    <string name="sync_with">Sync with</string>
    <string name="tell_a_friend_title">Tell a Friend</string>
    <string name="unfavorite">Remove from Favorites</string>
    <string name="unlock_pin">PIN Code</string>
    <string name="update_and_analytics">Updates and Analytics</string>
    <string name="upgrade">Upgrade to Pro-version</string>
</resources>