<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_delete_favorite" android:title="@string/remove_favorite" />
    <item android:icon="@locationawarelogger/TRACE_INT" android:id="@+id/copy_username_popup" android:title="@string/copy_username" />
    <item android:icon="@locationawarelogger/TRACE_INT" android:id="@+id/copy_password_popup" android:title="@string/copy_password" />
    <item android:icon="@locationawarelogger/TRACE_INT" android:id="@+id/launch_url_popup" android:title="@string/launch_url" />
    <item android:icon="@locationawarelogger/TRACE_INT" android:id="@+id/copy_card_number_popup" android:title="@string/copy_card_number" />
    <item android:icon="@locationawarelogger/TRACE_INT" android:id="@+id/copy_cvv_popup" android:title="@string/copy_cvv" />
</menu>
