<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/header" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textAppearance="?unknown_attr_ref: 1010041" android:id="@+id/cert_learn_more" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/learn_more" android:layout_below="@+id/header" />
    <TextView android:textStyle="bold" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/cert_subject" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssl_subject" android:layout_below="@+id/cert_learn_more" />
    <TextView android:textStyle="bold" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/cert_issuer" android:paddingLeft="10dp" android:paddingTop="10dp" android:paddingRight="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssl_issuer" android:layout_below="@+id/cert_subject" />
    <TextView android:textStyle="bold" android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end" android:id="@+id/cert_expire_on" android:padding="10dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ssl_expire_on" android:layout_below="@+id/cert_issuer" />
    <Button android:textColor="0x1060016" android:id="@+id/btn_cert_accepted" android:layout_width="UNKNOWN_DATA_0xc801" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:text="@string/certificate_accept" android:layout_below="@+id/cert_expire_on" android:layout_centerHorizontal="true" android:textAllCaps="false" />
    <Button android:id="@+id/btn_cert_cancel" android:layout_width="UNKNOWN_DATA_0xc801" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="20dp" android:layout_marginRight="10dp" android:text="@string/certificate_abort" android:layout_below="@+id/btn_cert_accepted" android:layout_centerHorizontal="true" android:textAllCaps="false" />
</RelativeLayout>
